prevent crunched profile on small devices

--- a/src/styles/ProfilePage.module.css
+++ b/src/styles/ProfilePage.module.css
@@ -16,6 +16,12 @@
     margin: 1%;
   }
 
+  @media screen and (max-width: 576px) {
+    .ProfileDetailsContainer {
+      font-size: 3vw;
+    }
+  }
+
   .ProfileSpacing {
     gap: 10%;
   }
